making block white

--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
 <!--</section>-->
 <!--&lt;!&ndash; End youtube video &ndash;&gt;-->
 
-  <section class="hero is-small is-light">
+<!--  <section class="hero is-small is-light">-->
+  <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">The game of Mafia</h2>
