--- a/index.html
+++ b/index.html
@@ -220,35 +220,64 @@
 <!--</section>-->
 <!--&lt;!&ndash; End youtube video &ndash;&gt;-->
 
-<!--  <section class="hero is-small is-light">-->
-  <section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">The game of Mafia</h2>
-      <div class="columns is-centered">
-        <div class="column is-two-thirds">
-          <div class="publication-text">
-            <p>Due to the challenges of evaluation of asynchrony modeling, we choose to set it in a game setting.
+<!--&lt;!&ndash;  <section class="hero is-small is-light">&ndash;&gt;-->
+<!--  <section class="hero is-small">-->
+<!--  <div class="hero-body">-->
+<!--    <div class="container">-->
+<!--      <h2 class="title is-3">The game of Mafia</h2>-->
+<!--      <div class="columns is-centered">-->
+<!--        <div class="column is-two-thirds">-->
+<!--          <div class="publication-text">-->
+<!--            <p>Due to the challenges of evaluation of asynchrony modeling, we choose to set it in a game setting.-->
 
 
-            </p>
-            <p>Games give each participant an objective. Winning the game is a proxy metric of whether the communication was successful. It sets the conversation under a frame of rules, where each participant needs to use the communication to advance to their target.
+<!--            </p>-->
+<!--            <p>Games give each participant an objective. Winning the game is a proxy metric of whether the communication was successful. It sets the conversation under a frame of rules, where each participant needs to use the communication to advance to their target.-->
 
 
-            </p>
-            <p>We choose the social deduction game <b>Mafia</b>, where participants are assigned secret roles (either <em>mafia</em> or <em>bystander</em>), and need to collaborate under uncertainty and deception to vote out player from the opposite team.
+<!--            </p>-->
+<!--            <p>We choose the social deduction game <b>Mafia</b>, where participants are assigned secret roles (either <em>mafia</em> or <em>bystander</em>), and need to collaborate under uncertainty and deception to vote out player from the opposite team.-->
 
 
-            </p>
-            <p>We choose the game of Mafia since, it can be based solely on textual interaction, which allows LLMs to play together with human players; it requires cooperating amid ambiguity, making the communication a fundamental aspect of the game; and it centers around suspicion of other players, so timing of communication can crucial for the player to avoid suspicion.
+<!--            </p>-->
+<!--            <p>We choose the game of Mafia since, it can be based solely on textual interaction, which allows LLMs to play together with human players; it requires cooperating amid ambiguity, making the communication a fundamental aspect of the game; and it centers around suspicion of other players, so timing of communication can crucial for the player to avoid suspicion.-->
 
-            </p>
+<!--            </p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="column is-one-third">-->
+<!--          <div class="publication-image has-text-centered">-->
+<!--            <img src="static/images/game_rules.png" alt="Mafia rules">-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</section>-->
+
+  <section class="section hero is-small">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full">
+        <div class="content">
+          <h2 class="title is-3">The game of Mafia</h2>
+
+          <div class="columns">
+            <div class="column is-two-thirds">
+              <p>Due to the challenges of evaluation of asynchrony modeling, we choose to set it in a game setting.
+              </p>
+              <p>Games give each participant an objective. Winning the game is a proxy metric of whether the communication was successful. It sets the conversation under a frame of rules, where each participant needs to use the communication to advance to their target.
+              </p>
+              <p>We choose the social deduction game <b>Mafia</b>, where participants are assigned secret roles (either <em>mafia</em> or <em>bystander</em>), and need to collaborate under uncertainty and deception to vote out player from the opposite team.
+              </p>
+              <p>We choose the game of Mafia since, it can be based solely on textual interaction, which allows LLMs to play together with human players; it requires cooperating amid ambiguity, making the communication a fundamental aspect of the game; and it centers around suspicion of other players, so timing of communication can crucial for the player to avoid suspicion.
+              </p>
+            </div>
+            <div class="column is-one-third">
+              <img src="static/images/game_rules.png" alt="Mafia rules" class="blend-img-background center-image" style="max-width: 85%; height: auto;" />
+            </div>
           </div>
-        </div>
-        <div class="column is-one-third">
-          <div class="publication-image has-text-centered">
-            <img src="static/images/game_rules.png" alt="Mafia rules">
-          </div>
+
         </div>
       </div>
     </div>
