--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
           <h2 class="title is-3">The game of Mafia</h2>
 
           <div class="columns">
-            <div class="column is-two-thirds">
-              <p>Due to the challenges of evaluation of asynchrony modeling, we choose to set it in a game setting.
+            <div class="column is-half">
+              <p>Due to the challenging ambiguity of evaluation of asynchrony modeling, we choose to set it in a game setting.
               </p>
               <p>Games give each participant an objective. Winning the game is a proxy metric of whether the communication was successful. It sets the conversation under a frame of rules, where each participant needs to use the communication to advance to their target.
               </p>
@@ -273,7 +273,7 @@
               <p>We choose the game of Mafia since, it can be based solely on textual interaction, which allows LLMs to play together with human players; it requires cooperating amid ambiguity, making the communication a fundamental aspect of the game; and it centers around suspicion of other players, so timing of communication can crucial for the player to avoid suspicion.
               </p>
             </div>
-            <div class="column is-one-third">
+            <div class="column is-half">
               <img src="static/images/game_rules.png" alt="Mafia rules" class="blend-img-background center-image" style="max-width: 85%; height: auto;" />
             </div>
           </div>
