--- a/index.html
+++ b/index.html
@@ -427,8 +427,7 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>
-@misc{eckhaus2025timetalkllmagents,
+      <pre><code>@misc{eckhaus2025timetalkllmagents,
       title={Time to Talk: LLM Agents for Asynchronous Group Communication in Mafia Games},
       author={Niv Eckhaus and Uri Berger and Gabriel Stanovsky},
       year={2025},
@@ -436,8 +435,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.MA},
       url={https://arxiv.org/abs/2506.05309},
-}
-      </code></pre>
+}</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
@@ -450,9 +448,8 @@
         <div class="content">
 
           <p>
-            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
-            You are free to borrow the source code of this website, we just ask that you link back to this page in the footer. <br> This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
-            Commons Attribution-ShareAlike 4.0 International License</a>.
+            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a>.
+            <br>This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
 
         </div>
