--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://github.com/niveck" target="_blank">Niv Eckhaus</a>,</span>
+                <a href="https://www.linkedin.com/in/niveckhaus/" target="_blank">Niv Eckhaus</a>,</span>
                 <span class="author-block">
                   <a href="https://uriberger.github.io/" target="_blank">Uri Berger</a>,</span>
                   <span class="author-block">
