--- a/index.html
+++ b/index.html
@@ -351,11 +351,11 @@
               </p><br><br>
             <img src="static/images/mean_time_diff_hists.png" alt="Time difference histograms" class="blend-img-background center-image" style="max-width: 85%; height: auto;" />
 <!--            <div class="subtitle has-text-centered">Distribution of time differences between messages. Each observation in this distribution represents a player in a specific game and the observation's value is the mean time difference (in seconds) between the player's message and a previous message by another player (left) or by the same player (right), averaged across all messages of this player in this game. Blue, yellow and red distributions represent human, 8B parameter LLM and 70B parameter LLM players, respectively.</div>-->
-            <p>Distribution of time differences between messages. Each observation in this distribution represents a player in a specific game and the observation's value is the mean time difference (in seconds) between the player's message and a previous message by another player (left) or by the same player (right), averaged across all messages of this player in this game. Blue, yellow and red distributions represent human, 8B parameter LLM and 70B parameter LLM players, respectively.</p><br>
+            <p>Distribution of time differences between messages. Each observation in this distribution represents a player in a specific game and the observation's value is the mean time difference (in seconds) between the player's message and a previous message by another player (left) or by the same player (right), averaged across all messages of this player in this game. Blue, yellow and red distributions represent human, Llama3.1 8B-based agent and Llama3.3 70B-based agent players, respectively.</p><br>
           <div class="columns">
             <div class="column">
               <img src="static/images/llm_performance_in_game.png" alt="Winning percentages" class="blend-img-background center-image" style="max-width: 85%; height: auto;" />
-              Win percentages of human players compared to the LLM agents (with 8B or 70B parameters), by role in the game.
+              <br>Win percentages of human players compared to the LLM agents, by role in the game.
             </div>
 
             <div class="column">
