modified the classfication table phrasing

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
             <div class="column">
               <img src="static/images/classification_table.png" alt="Message embedding separation classification" class="blend-img-background center-image" style="max-width: 85%; height: auto;" />
-              Separation performance by a linear classifier for message embeddings, by different features. <b>8B F1</b> and <b>70B F1</b> represent the F1 scores for analysis over games played with the 8B parameter LLM and the 70B parameter LLM, respectively.
+              Separation performance by a linear classifier for message embeddings. The two <b>Agent</b> columns represent the F1 scores for analysis over games played with the corresponding LLMs.
             </div>
           </div>
         </div>
